<resources>
    <string name="app_name">ReferralAppDomiLearn</string>
    <string name="email_hint">Enter your email Id</string>
    <string name="name_hint">Enter your name</string>
    <string name="submit_text">Sign up</string>
    <string name="user_details_text">Register</string>
    <string name="enter_a_password_hint">Enter a password</string>
    <string name="referral">Referral Code</string>
</resources>
