<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#67afe7"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/user_details_text"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/ab"
        android:layout_marginBottom="203dp"
        android:text="Name and Email are Compulsory fields*"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/name"
        android:layout_below="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="32dp"
        android:hint="@string/name_hint"
        android:inputType="text" />



        <EditText
            android:id="@+id/email"
            android:layout_marginTop="20dp"
            android:layout_below="@id/name"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/referral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email"
        android:hint="@string/referral"
        android:inputType="text" />


    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="139dp"
        android:layout_marginEnd="74dp"
        android:background="@color/colorPrimary"
        android:text="@string/submit_text"
        android:textColor="@android:color/white"
        android:visibility="visible"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/submit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/submit"
        android:layout_marginStart="64dp"
        android:background="@color/colorPrimary"
        android:text="clear"
        android:textColor="@android:color/white"
        tools:ignore="RelativeOverlap" />
    <TextView
        android:id="@+id/copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="copy this referral code"
        android:layout_margin="5dp"
        android:textColor="@color/colorPrimary"
        android:visibility="gone"
        android:layout_above="@+id/referCode"/>


    <EditText
        android:id="@+id/referCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="65dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="Use this code to refer others"
        android:inputType="text"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/ab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="26dp"
        android:layout_marginStart="18dp"
        android:textColor="@android:color/white"
        android:text="Account Balance :"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/ab"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="26dp"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/white"
        android:text="0"
        android:textSize="20sp"
        android:visibility="gone"/>

</RelativeLayout>